# bachelor_openstream

./: .gitignore  .gitlab-ci.yml  README.md  README_BACHELOR.md  REUSE.toml  compose.yaml  justfile  minio-init.sh
backend/: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  crontab  pyproject.toml
backend/docker/: Dockerfile  entrypoint.sh  gunicorn-settings.py
backend/openstream/: manage.py
backend/openstream/app/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
backend/openstream/app/data/KMD/: lokale ID.xlsx
backend/openstream/app/management/commands/: initialize_database.py
backend/openstream/app/migrations/: 0001_initial.py  0002_slideshow_slideshow_data_delete_slide.py  0002_userextended.py  0003_alter_userextended_language_preference.py  0004_merge_20250220_0321.py  0005_alter_document_file.py  0006_delete_userextended.py  0007_userextended.py  0008_remove_displaywebsitegroup_suborganisation_and_more.py  0009_slideshowplayerapikey_branch_delete_externalapikey.py  0010_remove_displaywebsitegroup_default_content_and_more.py  0011_alter_slideshowplayerapikey_user.py  0012_auto_20250307_2107.py  0013_category_tag_slideshow_mode_and_more.py  0014_slidetemplate.py  0015_scheduledcontent_combine_with_default.py  0016_branchurlcollectionitem.py  0017_document_file_type.py  0017_documentcategory.py  0018_merge_0017_document_file_type_0017_documentcategory.py  0019_document_category_document_tags.py  0020_alter_document_file_type_alter_tag_name.py  0021_customcolor.py  0022_alter_customcolor_organisation_and_more.py  0023_alter_customfont_options_remove_customfont_url_and_more.py  0024_scheduledcontent_description.py  0025_category_organisation_tag_organisation_and_more.py  0026_slidetemplate_accepted_aspect_ratios.py  0027_alter_slideshow_iscustomdimensions.py  0028_alter_organisationmembership_organisation_and_more.py  0029_recurringscheduledcontent.py  0030_add_updated_at_to_slideshow_and_playlist.py  0031_registeredslidetypes.py  0032_alter_registeredslidetypes_name.py  0033_wayfinding.py  0034_organisationapiaccess.py  0035_update_registered_slide_types_choices.py
backend/openstream/app/tests/: test_consumers.py  test_ws_slideshow.py
backend/openstream/osauth/: apps.py  authentication.py  errors.py  keycloak.py  serializers.py  utils.py  views.py
backend/openstream/project/: asgi.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
backend/openstream/sso/: apps.py  views.py
backend/openstream/tests/: test_consumers.py
dev-environment/: README.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  fix-handlebars-indentation.cjs  maketranslations.js  package-lock.json  package.json  runtime-entrypoint.sh  stylelint.config.cjs  vite.config.js
media_converter_service/: Dockerfile  (+2 more)
(+320 files in other folders)
